--- a/PhDProposal 01/Chp22-Pre2/PreResults22.tex
+++ b/PhDProposal 01/Chp22-Pre2/PreResults22.tex
@@ -29,7 +29,7 @@ comparability
 !!!!cite a nice pushing for this publication here!!!!
 
 Necessity of standardisation of methods and open publishing of data and models: \citep{Reichman2011}
-Focus on sharing data openly, but just as important is publishing of statistical scripts and actual model code!
+Focus on sharing data openly, but just as important is publishing of statistical scripts and actual model code
 
 This only makes sense if model code is understandable to the average ecosystem modeler, need to use a widely available, standardized programming language:
 PYTHON
