--- a/PhDProposal 01/Chp3-Further/Further.tex
+++ b/PhDProposal 01/Chp3-Further/Further.tex
@@ -32,6 +32,19 @@ ALSO BDEF MODEL BY LOREAU: \citep{Loreau1998b}
  
  And then say how the model I am building is actually very well equipped to deal with this kind of 
 
+\begin{figure}[h]
+\centering
+\includegraphics[trim = 0mm 0mm 0mm 0mm, clip, width=.8\linewidth]{./Chp3-Further/PinckneyDiversityPigmentData.jpg}
+\end{figure}
+Fig. 5. "Time series contour plot of photopigment diversity index (H′). Data points are indicated by dots on the plot and the white line shows the mixed layer depth." from \citet{Pinckney2015}
+%this needs proper formatting still man
+
+\begin{figure}[h]
+\centering
+\includegraphics[trim = 0mm 0mm 0mm 0mm, clip, width=.8\linewidth]{./Chp3-Further/Abundances.pdf}
+\end{figure}
+% need to edit in illustrator
+
 
 XXXXX
 
